...
                        <!--table head  -->
                        <TextView
                            android:id="@+id/people_num_bar_col_1_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                        <!--line type spinner-->
                        <Spinner
                            android:id="@+id/line_type_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <Switch
                            android:id="@+id/forecast_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                        <!--model type spinner-->
                        <Spinner
                            android:id="@+id/model_type_spinner"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                                <!--month input-->
                                <EditText
                                    android:id="@+id/control_start_date_month_input"
                                    android:layout_width="30dp"
                                    android:layout_height="40dp"
...

                                <EditText
                                    android:id="@+id/control_start_date_day_input"
                                    android:layout_width="30dp"
                                    android:layout_height="40dp"
...

                                <Spinner
                                    android:id="@+id/control_level_spinner"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
...
                                    android:text="@string/control_duration_label" />
                                <EditText
                                    android:id="@+id/control_duration_input"
                                    android:layout_width="40dp"
                                    android:layout_height="40dp"
...

                                <Button
                                    android:id="@+id/till_today_button"
                                    android:layout_width="80dp"
                                    android:layout_height="40dp"
...
                                    android:text="@string/r1_label" />
                                <EditText
                                    android:id="@+id/r1_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...
                                    android:text="@string/r2_label" />
                                <EditText
                                    android:id="@+id/r2_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...

                                <EditText
                                    android:id="@+id/n_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...
                                    android:text="@string/b1_label" />
                                <EditText
                                    android:id="@+id/b1_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...
                                    android:text="@string/b2_label" />
                                <EditText
                                    android:id="@+id/b2_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...
                                    android:text="@string/a_label" />
                                <EditText
                                    android:id="@+id/a_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...
                                    android:text="@string/v_label" />
                                <EditText
                                    android:id="@+id/v_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...
                                    android:text="@string/d_label" />
                                <EditText
                                    android:id="@+id/d_input"
                                    android:layout_width="100dp"
                                    android:layout_height="40dp"
...
                        <!--submit button-->
                        <Button
                            android:id="@+id/reset_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...
                        <!--submit button-->
                        <Button
                            android:id="@+id/submit_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/change_nation_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <Spinner
                android:id="@+id/change_province_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

            <ToggleButton
                android:id="@+id/home_or_abroad_toggle_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
